<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/pure_white"
    tools:context="countryguess.com.countryguess.GameActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/globe_gif"
        android:layout_centerHorizontal="true"
        android:id="@+id/globe"/>

    <TextView
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:id="@+id/new_game"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/new_game"
        android:background="@color/colorNewGame"
        android:gravity="center"
        android:textSize="@dimen/main_text_size"
        android:layout_above="@+id/game_rules"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/game_rules"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/rules"
        android:textSize="@dimen/main_text_size" />

    <TextView
        android:id="@+id/quit_game"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_rules"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:background="@color/colorAccent"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/exit"
        android:textSize="@dimen/main_text_size" />
</RelativeLayout>
